test-app/nginx-hello-world-vouch/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-hello-web-server
  namespace: nginx-hello
spec:
  selector:
    matchLabels:
      app: nginx-hello
  template:
    metadata:
      labels:
        app: nginx-hello
    spec:
      containers:
      - name: nginx-hello
        image: nginx
        ports:
        - containerPort: 80
